初步可於Mac運行的版本

--- a/danny_tnps/前言操作.Md
+++ b/danny_tnps/前言操作.Md
@@ -1,10 +1,31 @@
-#  LLM 與 Neo4J 操作說明
+# LLM 與 Neo4J 操作說明
 
+## 環境準備：
 
-![title](./png/hole.png)
+1. ckip bert model download
 
+   ```
+   huggingface-cli login
+   huggingface-cli download --resume-download ckiplab/bert-base-chinese-ws --local-dir ./ckip_model/bert-base-chinese-ws
+   huggingface-cli download --resume-download ckiplab/bert-base-chinese-pos --local-dir ./ckip_model/bert-base-chinese-pos
+   huggingface-cli download --resume-download ckiplab/bert-base-chinese-ner --local-dir ./ckip_model/bert-base-chinese-ner
+   ```
+2. Ollama 安裝
+   [https://ollama.com/](https://ollama.com/)
+3. 千問模型下載
 
-## [😣 相關設定開啟:] 
+   ```ollama
+   ollama run qwen2:72b-instruct-q8_0
+   ```
+4. 啟動外圍服務
+
+   ```
+   docker-compose up -d
+   ```
+5. 
+
+## [😣 相關設定開啟:]
+
 ```python
 
 STEP0: 
@@ -33,7 +54,7 @@ STEP2:
     -e NEO4J_dbms_directories_data=/data \
     -e NEO4J_PLUGINS=\[\"apoc\"\] neo4j:latest
 
-* 備份 neo4j (需先關閉原本的neo4j容器服務，再執行以下指令):    
+* 備份 neo4j (需先關閉原本的neo4j容器服務，再執行以下指令):  
     docker run --rm \
     -v /home/u004134/TestFolder/LLM_Soft/n4j_data:/data \
     -v /home/u004134/TestFolder/LLM_Soft/backups:/backups \
@@ -58,15 +79,12 @@ STEP3:
 STEP4: 
 * redis 服務:(存放詢問的商品名稱)
     docker run -d --name redis-stack -p 6379:6379 -p 8001:8001 redis/redis-stack:latest
-    
+  
 ```
 
+## [😣 Neo4j 指令]
 
-
-
-## [😣 Neo4j 指令] 
-
-```java 
+```java
 
 * 刪除特定節點: 
     MATCH (n:bu) DETACH DELETE n
@@ -104,12 +122,12 @@ STEP4:
 """
 
 ```
-## [😣補充]  GRAPH 教學: 
+
+## [😣補充]  GRAPH 教學:
+
 [Knowledge Graphs for RAG -- Constructing a Knowledge Graph from Text Documents (吴恩达-知识图谱在RAG中的应用 3](https://blog.csdn.net/weixin_40959890/article/details/136993722)
 
-
 [Knowledge Graphs for RAG -- Adding Relationships to the SEC Knowledge Graph (吴恩达-知识图谱在RAG中的应用 4](https://blog.csdn.net/weixin_40959890/article/details/137025511)
-
 
 [Knowledge Graphs for RAG --Expanding the SEC Knowledge Graph (吴恩达-知识图谱在RAG中的应用 5](https://blog.csdn.net/weixin_40959890/article/details/137167045)
 
